@@ -1058,6 +1058,10 @@ edit_unalias=Convert to Sub-Server
 edit_unaliasdesc=Convert this alias server into a sub-server, so that it can have its own web pages, mailboxes and mail aliases.
 edit_changepass=Change Password
 edit_changepassdesc=Change the password for this virtual server.
+edit_changeadminpass=Change Your Password
+edit_changeadminpassdesc=Change the password for your administrator account
+edit_changeresellerpass=Change Your Password
+edit_changeresellerpassdesc=Change the password for your reseller account
 edit_usage=Disk Usage
 edit_usagedesc=Click this button to show disk usage for this virtual server and any sub-servers.
 edit_created=Created on
@@ -1846,6 +1850,7 @@ log_create_admin=Created extra administrator $1
 log_delete_admin=Deleted extra administrator $1
 log_modify_admin=Modified extra administrator $1
 log_switch_admin=Switched to extra administrator $1
+log_pass_admin=Change password for extra administrator $1
 log_dynip=Updated dynamic IP address settings
 log_add_styles=Installed third-party style $1
 log_enable_styles=Enabled content styles
@@ -2284,7 +2289,7 @@ limits_edit_catchall=Can create catchall aliases
 limits_edit_html=Can use web page editor
 limits_edit_mail=Can edit email settings
 limits_edit_allowedhosts=Can edit database remote hosts
-limits_edit_passwd=Can change password
+limits_edit_passwd=Can change domain's password
 limits_shell=Allowed login type
 limits_shell_nologin=No login
 limits_shell_ftp=FTP only
@@ -3870,7 +3875,7 @@ pass_title=Change Password
 pass_ecannot=You are not allowed to change the password for this domain
 pass_ecannot2=You must specify a domain to change the password for
 pass_header1=Change virtual server password
-pass_header2=Change reseller password
+pass_header2=Change your password
 pass_new1=New password
 pass_new2=New password again
 pass_ok=Change Now
@@ -3878,7 +3883,9 @@ pass_err=Failed to change password
 pass_enew1=No new password entered
 pass_enew2=New passwords don't match
 pass_eresel=Could not find reseller!
+pass_eadmin=Could not find administrator!
 pass_changing=Changing reseller password ..
+pass_changing2=Changing administrator password ..
 
 dbname_err=Failed to change database usernames
 dbname_euser=Missing or invalid username
