@@ -1165,3 +1165,4 @@ Updated the French translation, thanks to Houssin Regis.
 Added the modify-php-ini API command to update PHP variables in one or more virtual servers at once.
 Added validation to prevent SSL from being enabled on a virtual server with an invalid certificate or key.
 Resellers can be denied access to plans using the Edit Reseller page, or via the modify-reseller API call.
+Extra administrators can now change their own passwords, via a new link on the left menu.
